hphp/hack/test/typecheck/conditional_class_decl.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

if (true) {
  class A {} // bad
} else {
  class B {} // bad
}

class C {} // good
